--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,7 @@ jobs:
     docker:
       - image: circleci/node:12
     steps:
+    - run: echo "$CIRCLE_REPOSITORY_URL" > build_asset.txt
     - aws-ecr/build-and-push-image:
         account-url: AWS_ECR_ACCOUNT_URL
         region: AWS_REGION
